Adjusting CSS for compare table where missing borders; correcting use of "none" to transparent for background

--- a/css/pmpro-advanced-levels.css
+++ b/css/pmpro-advanced-levels.css
@@ -190,6 +190,10 @@
 	vertical-align: middle;
 }
 
+.pmpro_advanced_levels-compare_table tbody tr td {
+	border-top-width: 1px;
+}
+
 .pmpro_advanced_levels-compare_table thead tr:first-child th:not(.pmpro_advanced_levels-compare_table thead tr:first-child th:first-child) {
 	border-top-width: 1px;
 	padding-top: var(--pmproal--spacing--medium);
@@ -200,14 +204,9 @@
 	border-right-width: 1px;
 }
 
-.pmpro_advanced_levels-compare_table thead tr th:nth-child(even),
-.pmpro_advanced_levels-compare_table tbody tr td:nth-child(even) {
-	background-color: var(--pmproal--row--color-alt);
-}
-
 .pmpro_advanced_levels-compare_table thead tr th:first-child,
 .pmpro_advanced_levels-compare_table tfoot tr td:first-child {
-	background-color: none;
+	background-color: transparent;
 }
 
 .pmpro_advanced_levels-compare_table thead tr:last-child th,
@@ -217,10 +216,10 @@
 
 .pmpro_advanced_levels-compare_table tbody tr:nth-child(even) td {
 	background-color: var(--pmproal--row--color-alt);
-	border-top-width: 1px;
 }
 
 .pmpro_advanced_levels-compare_table tbody tr td:first-child {
+	border-left-width: 1px;
 	text-align: right;
 }
 
@@ -232,7 +231,6 @@
 .pmpro_advanced_levels-compare_table tfoot tr:last-child td:not(.pmpro_advanced_levels-compare_table tfoot tr:last-child td:first-child) {
 	border-bottom-width: 1px;
 }
-
 
 .pmpro_advanced_levels-compare_table .pmpro_level-description ul {
 	display: inline-block;
